<resources>
    <string name="app_name">2048</string>
    <string name="_2048_game">2048 GAME</string>
    <string name="start_game">START GAME</string>
    <string name="authenticate">AUTHENTICATE</string>
    <string name="value_format" translatable="false">%1$.2f</string>
    <string name="restart_game">Restart Game</string>
    <string name="home_page">Home Page</string>
    <string name="fingerprint_title">Fingerprint authentication</string>
    <string name="fingerprint_message">Fingerprint authentication allows you to save the game and a high score</string>
    <string name="dialog_accept">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="restart_game_question_dialog">Are you sure you want to restart game?</string>
    <string name="settings" translatable="false">settings</string>
    <string name="dark_theme" translatable="false">dark theme</string>
    <string name="volume" translatable="false">mute</string>
    <string name="score">Score</string>
    <string name="high_score">High score</string>
    <string name="authentication" translatable="false">Authentication</string>
    <string name="dialog_back_question">Are you sure you want to exit?\nYour game will not be saved.</string>
    <string name="settings_menu_title">Which functions to enable?</string>
    <string name="Gyroscope_And_Accelerometer_Settings">Controlling the game by moving the phone</string>
    <string name="Magnetometer_Settings">Fields change colours based on orientation</string>
    <string name="Light_Sensor_Settings">Darkmode controlled by light level</string>
    <string name="Proximity_Sensor_Settings">Pausing game when an object is detected by proximity sensor</string>
    <string name="undoButton">Undo</string>
    <string name="time">Time</string>
    <string name="end_game">END GAME</string>
    <string name="goal_achieved_question">You have achieved the goal.\nWould you like to continue game?</string>
    <string name="continue_game_dialog">Continue</string>
    <string name="end_game_dialog">End Game</string>
    <string name="Credits_Title">Authors</string>
    <string name="Author_Julia"><u>Julia Szymanska</u></string>
    <string name="Author_Przemek"><u>Przemyslaw Zdrzalik</u></string>
    <!--    Listener Callback Strings-->
    <string name="Undo_Succeed" translatable="false">Undo_Succeed</string>
    <string name="Button_Green" translatable="false">Button_Green</string>
    <string name="Button_Green_Light" translatable="false">Button_Green_Light</string>
    <string name="Button_Blue" translatable="false">Button_Blue</string>
    <string name="Button_Blue_Light" translatable="false">Button_Blue_Light</string>
    <string name="Notify_Adapter" translatable="false">Notify_Adapter</string>
    <string name="MoveUP" translatable="false">MoveUP</string>
    <string name="MoveDown" translatable="false">MoveDown</string>
    <string name="MoveRight" translatable="false">MoveRight</string>
    <string name="MoveLeft" translatable="false">MoveLeft</string>
    <string name="SetTheme" translatable="false">SetTheme</string>
    <string name="SetPauseOn" translatable="false">SetPauseOn</string>
    <string name="SetPauseOff" translatable="false">SetPauseOff</string>
    <string name="IsAuthenticated" translatable="false">IsAuthenticated</string>
    <string name="firstRun" translatable="false">FirstRun</string>
</resources>
